namespaces/live.cloud-platform.service.justice.gov.uk/interventions-vision/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-interventions-vision"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "interventions-vision"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Refer and Monitor: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/interventions-vision"
    cloud-platform.justice.gov.uk/team-name: "hmpps-interventions-vision"
    cloud-platform.justice.gov.uk/review-after: ""
